--- a/test/fixtures/comments.yml
+++ b/test/fixtures/comments.yml
@@ -1,4 +1,15 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: comments
+#
+#  id               :integer          not null, primary key
+#  body             :string
+#  user_id          :integer          not null
+#  commentable_type :string
+#  commentable_id   :integer
+#  created_at       :datetime         not null
+#  updated_at       :datetime         not null
+#
 
 one:
   body: MyString
